k8s/eks-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iicpc-sandboxes
