k8s/compiler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compilation-worker
  namespace: default
  labels:
    app: compilation-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compilation-worker
  template:
    metadata:
      labels:
        app: compilation-worker
    spec:
      serviceAccountName: iicpc-compiler
      containers:
      - name: compiler
        image: iicpc-compiler:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 512Mi
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
          type: Socket
