k8s/leaderboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-generator
  namespace: default
  labels:
    app: leaderboard-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboard-generator
  template:
    metadata:
      labels:
        app: leaderboard-generator
    spec:
      containers:
      - name: leaderboard
        image: iicpc-leaderboard:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: public-html
          mountPath: /app/data
        resources:
          limits:
            cpu: "250m"
            memory: 128Mi
          requests:
            cpu: "100m"
            memory: 64Mi
      volumes:
      - name: public-html
        persistentVolumeClaim:
          claimName: public-html-pvc
