k8s/redpanda.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: default
  labels:
    app: redpanda
spec:
  ports:
  - name: external
    port: 9092
    targetPort: 9092
  - name: admin
    port: 9644
    targetPort: 9644
  selector:
    app: redpanda
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redpanda
  namespace: default
spec:
  serviceName: redpanda
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
      - name: redpanda
        image: docker.redpanda.com/redpandadata/redpanda:v23.2.19
        command:
        - rpk
        - redpanda
        - start
        - --mode=dev-container
        - --smp=1
        - --memory=1Gi
        - --kafka-addr=PLAINTEXT://0.0.0.0:9092,OUTSIDE://0.0.0.0:9092
        - --advertise-kafka-addr=PLAINTEXT://redpanda:9092,OUTSIDE://redpanda:9092
        ports:
        - name: external
          containerPort: 9092
        - name: admin
          containerPort: 9644
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "250m"
            memory: 1Gi
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/redpanda/data
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
